Separando o codigo JSdo codigo HTML.

--- a/intex.html
+++ b/intex.html
@@ -14,22 +14,7 @@
 		<button type="submit">Enviar</button>
 	</form>
 	<div id="mensagem"></div>
-	<script>
-		const form = document.getElementById('formulario');
-		const campoA = document.getElementById('campoA');
-		const campoB = document.getElementById('campoB');
-		const mensagem = document.getElementById('mensagem');
-
-		form.addEventListener('submit', function(event) {
-			event.preventDefault();
-			if (parseInt(campoB.value) > parseInt(campoA.value)) {
-				mensagem.innerHTML = 'Formulário válido!';
-				mensagem.style.color = 'green';
-			} else {
-				mensagem.innerHTML = 'Formulário inválido!';
-				mensagem.style.color = 'red';
-			}
-		});
+	<script src="./main.js">
 	</script>
 </body>
 </html>
